--- a/Projekt/GUI/UserControls/PresentationScreenControl.xaml
+++ b/Projekt/GUI/UserControls/PresentationScreenControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Projekt.GUI.UserControls.EndResultsControl"
+﻿<UserControl x:Class="Projekt.GUI.UserControls.PresentationScreenControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,9 +8,11 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" >
 
-    <Grid Background="WhiteSmoke" d:DataContext="{x:Static design:EndResultsDesign.Instance}" x:Name="MainContainer">
-      
-        
+    <Grid Background="WhiteSmoke" d:DataContext="{x:Static design:PresentationScreenDesign.Instance}" x:Name="MainContainer">
+
+        <Grid.InputBindings>
+            <MouseBinding MouseAction="LeftClick" Command="{Binding ClickAwayCommand}"/>
+        </Grid.InputBindings>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="10*" />
@@ -51,11 +53,11 @@
             </ContentPresenter.InputBindings>
         </ContentPresenter>
 
-        <design:BasePopup Visibility="{Binding mViewModel.MenuVisibility, Converter={design:VisibilityBoolValueConverter}, RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type local:EndResultsControl}}}" 
+        <design:BasePopup Visibility="{Binding mViewModel.MenuVisibility, Converter={design:VisibilityBoolValueConverter}, RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type local:PresentationScreenControl}}}" 
                           Grid.Row="1" 
                           VerticalAlignment="Top" HorizontalAlignment="Right" 
                           Margin="10 0 10 0"
-                          DataContext="{Binding MenuPopupDataContext}"/>
+                          DataContext="{Binding MenuPopupDataContext}" />
 
 
     </Grid>
