--- a/Projekt/GUI/UserControls/Results.xaml
+++ b/Projekt/GUI/UserControls/Results.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Projekt.GUI.UserControls.ClassResultsControl"
+﻿<UserControl x:Class="Projekt.Results"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,7 +8,7 @@
              xmlns:projekt="clr-namespace:Projekt"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid d:DataContext="{x:Static design:ClassResultsDesign.Instance}">
+    <Grid d:DataContext="{x:Static design:ResultsDesign.Instance}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -25,6 +25,13 @@
             </Border>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
 
+                <Label Content="{Binding MethodSelected}"
+                       ContentStringFormat="Wybrana metoda klasyfikacji: {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding SessionsCount}"
                    ContentStringFormat="W grupie było {0} sesji"
                    Style="{StaticResource DefaultLabelStyle}"
@@ -39,6 +46,13 @@
                    FontSize="14"
                    Margin="5"
                    HorizontalAlignment="Right" />
+                <Label Content="{Binding Delta}"
+                       ContentStringFormat="Parametr delta wynosił: {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding OfflineMethodUsed}"
                    ContentStringFormat="Metodą offline oceniono: {0} sesji"
                    Style="{StaticResource DefaultLabelStyle}"
@@ -64,7 +78,7 @@
                        Foreground="White" />
             </Border>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <Label Content="{Binding SucessPercent}"
+                <Label Content="{Binding SuccessPercent}"
                    ContentStringFormat="Pozytywnie zaklasyfikowano {0}% sesji"
                    Style="{StaticResource DefaultLabelStyle}"
                    Foreground="White"
