--- a/Projekt/Dictionaries/RadioButtons.xaml
+++ b/Projekt/Dictionaries/RadioButtons.xaml
@@ -3,32 +3,28 @@
 
 
     <Style x:Key="DefaultRadioButton" TargetType="RadioButton">
-        <Setter Property="MinWidth" Value="100" />
-
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="RadioButton">
+                <ControlTemplate TargetType="{x:Type RadioButton}">
                     <BulletDecorator Background="Transparent" Cursor="Hand">
                         <BulletDecorator.Bullet>
-                            <Grid Height="16" Width="16">
-                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="Gainsboro"
-                                        BorderThickness="2" CornerRadius="2" />
-                                <Border CornerRadius="0" Margin="4" Name="RadioMark" Background="#FFADADAD"
-                                        Visibility="Hidden" />
+                            <Grid Height="20" Width="20">
+                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="DimGray" BorderThickness="2" CornerRadius="2" />
+                                <Border CornerRadius="0" Margin="4" Name="RadioMark" Background="{StaticResource Teal500ColorBrush}" Visibility="Hidden" />
                             </Grid>
                         </BulletDecorator.Bullet>
 
-                        <TextBlock Margin="3,1,0,0" Foreground="{StaticResource DarkVioletForgroundColorBrush}"
-                                   FontSize="16">
+                        <TextBlock Foreground="{StaticResource Teal500ColorBrush}" FontFamily="Calibri" FontSize="12">
                             <ContentPresenter />
                         </TextBlock>
                     </BulletDecorator>
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="true">
-                            <Setter TargetName="RadioMark" Property="Visibility" Value="Visible" />
-                            <Setter TargetName="RadioOuter" Property="BorderBrush" Value="#FFADADAD" />
+                            <Setter TargetName="RadioMark" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="RadioOuter" Property="BorderBrush" Value="{StaticResource Teal500ColorBrush}" />
                         </Trigger>
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
