--- a/Projekt/GUI/UserControls/Results.xaml
+++ b/Projekt/GUI/UserControls/Results.xaml
@@ -33,19 +33,19 @@
                        Margin="5"
                        HorizontalAlignment="Right" />
                 <Label Content="{Binding SessionsCount}"
-                   ContentStringFormat="W grupie było {0} sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="W grupie było {0} sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding KPercent}"
-                   ContentStringFormat="Przepracowano {0}% sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Przepracowano {0}% sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding Delta}"
                        ContentStringFormat="Parametr delta wynosił: {0}"
                        Style="{StaticResource DefaultLabelStyle}"
@@ -54,19 +54,19 @@
                        Margin="5"
                        HorizontalAlignment="Right" />
                 <Label Content="{Binding OfflineMethodUsed}"
-                   ContentStringFormat="Metodą offline oceniono: {0} sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Metodą offline oceniono: {0} sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding OnlineMethodUsed}"
-                   ContentStringFormat="Metodą online oceniono: {0} sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Metodą online oceniono: {0} sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Vertical" Background="IndianRed" Grid.Column="1">
@@ -79,33 +79,33 @@
             </Border>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                 <Label Content="{Binding SuccessPercent}"
-                   ContentStringFormat="Pozytywnie zaklasyfikowano {0}% sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Pozytywnie zaklasyfikowano {0}% sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding FailurePercent}"
-                   ContentStringFormat="Błędnie zaklasyfikowano {0}% sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Błędnie zaklasyfikowano {0}% sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding TruePositive}"
-                   ContentStringFormat="True-Positive {0} sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="True-Positive {0} sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding TrueNegative}"
-                   ContentStringFormat="True-Negative {0} sesji"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="True-Negative {0} sesji"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding FalsePositive}"
                        ContentStringFormat="False-Positive {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
@@ -121,26 +121,33 @@
                        Margin="5"
                        HorizontalAlignment="Right" />
                 <Label Content="{Binding Recall}"
-                   ContentStringFormat="Recall wynosi {0}"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Recall wynosi {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding Precision}"
-                   ContentStringFormat="Precision wynosi {0}"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Precision wynosi {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
+                <Label Content="{Binding Accuracy}"
+                       ContentStringFormat="Accuracy wynosi {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
                 <Label Content="{Binding Measure}"
-                   ContentStringFormat="Współczynik F1 wynosi {0}"
-                   Style="{StaticResource DefaultLabelStyle}"
-                   Foreground="White"
-                   FontSize="14"
-                   Margin="5"
-                   HorizontalAlignment="Right" />
+                       ContentStringFormat="Współczynik F1 wynosi {0}"
+                       Style="{StaticResource DefaultLabelStyle}"
+                       Foreground="White"
+                       FontSize="14"
+                       Margin="5"
+                       HorizontalAlignment="Right" />
             </StackPanel>
         </StackPanel>
 
