--- a/Projekt/GUI/UserControls/FilesListControl.xaml
+++ b/Projekt/GUI/UserControls/FilesListControl.xaml
@@ -1,26 +1,22 @@
 ﻿<UserControl x:Class="Projekt.FilesListControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Projekt.ViewModels"
              xmlns:projekt="clr-namespace:Projekt"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DataContext="{x:Static projekt:FilesListDesign.Instance}"
              d:DesignHeight="300" d:DesignWidth="300" Background="Transparent">
-
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding List}">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Background="Transparent">
+            <ItemsControl ItemsSource="{Binding List}" Padding="10 0 10 0">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Vertical">
-                            <projekt:FileControl Margin="5"/>
-                        </StackPanel>
+                        <projekt:FileControl Margin="2" />
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
     </Grid>
 </UserControl>
-
