--- a/Projekt/GUI/UserControls/PlaceHolderControl.xaml
+++ b/Projekt/GUI/UserControls/PlaceHolderControl.xaml
@@ -5,12 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" >
         <Image Source="../../Resources/Sad_Cloud_96px.png" Width="96" Height="96" />
         <Label Content="Pojawią się nie zmyślam!"
                FontWeight="DemiBold"
                Foreground="{StaticResource NoContentGrayColorBrush}"
                HorizontalAlignment="Center"
-               FontSize="26" />
+               FontSize="{StaticResource FontSizeXLarge}" />
     </StackPanel>
 </UserControl>
