--- a/Projekt/GUI/UserControls/ResultsControl.xaml
+++ b/Projekt/GUI/UserControls/ResultsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Projekt.Results"
+﻿<UserControl x:Class="Projekt.ResultsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,148 +8,150 @@
              xmlns:projekt="clr-namespace:Projekt"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid d:DataContext="{x:Static design:ResultsDesign.Instance}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
-
         </Grid.ColumnDefinitions>
 
-        <StackPanel Orientation="Vertical" Background="LightSkyBlue" Grid.Column="0">
-            <Border BorderThickness="3" BorderBrush="DimGray">
-                <Label Content="Ogólne"
-                       Background="DarkOrange"
-                       FontSize="16" FontWeight="DemiBold"
+        <!--First column-->
+        <Border BorderThickness="4 4 2 4" BorderBrush="{StaticResource MainColorBrush}">
+            <StackPanel Orientation="Vertical" Background="{StaticResource DarkBackgroundColorBrush}" Grid.Column="0">
+                    <Label Content="Ogólne"
+                       Background="{StaticResource SecondaryColorBrush}"
+                       FontSize="{StaticResource FontSizeLarge}" FontWeight="DemiBold"
                        HorizontalContentAlignment="Center"
-                       Foreground="White" />
-            </Border>
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                       Foreground="{StaticResource LightFontColorBrush}" />
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
 
-                <Label Content="{Binding MethodSelected}"
+                    <Label Content="{Binding MethodSelected}"
                        ContentStringFormat="Wybrana metoda klasyfikacji: {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding SessionsCount}"
+                    <Label Content="{Binding SessionsCount}"
                        ContentStringFormat="W grupie było {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding KPercent}"
+                    <Label Content="{Binding KPercent}"
                        ContentStringFormat="Przepracowano {0}% sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding Delta}"
+                    <Label Content="{Binding Delta}"
                        ContentStringFormat="Parametr delta wynosił: {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding OfflineMethodUsed}"
+                    <Label Content="{Binding OfflineMethodUsed}"
                        ContentStringFormat="Metodą offline oceniono: {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding OnlineMethodUsed}"
+                    <Label Content="{Binding OnlineMethodUsed}"
                        ContentStringFormat="Metodą online oceniono: {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-        <StackPanel Orientation="Vertical" Background="IndianRed" Grid.Column="1">
-            <Border BorderThickness="3" BorderBrush="DimGray">
-                <Label Content="Rezultat"
-                       Background="DarkOrange"
-                       FontSize="16" FontWeight="DemiBold"
+        </Border>
+
+        <!--Second column-->
+        <Border BorderThickness="2 4 4 4" BorderBrush="{StaticResource MainColorBrush}" Grid.Column="1">
+            <StackPanel Orientation="Vertical" Background="{StaticResource DarkBackgroundColorBrush}" >
+                    <Label Content="Rezultat"
+                       Background="{StaticResource SecondaryColorBrush}"
+                       FontSize="{StaticResource FontSizeLarge}" FontWeight="DemiBold"
                        HorizontalContentAlignment="Center"
-                       Foreground="White" />
-            </Border>
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <Label Content="{Binding SuccessPercent}"
+                       Foreground="{StaticResource LightFontColorBrush}" />
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                    <Label Content="{Binding SuccessPercent}"
                        ContentStringFormat="Pozytywnie zaklasyfikowano {0}% sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding FailurePercent}"
+                    <Label Content="{Binding FailurePercent}"
                        ContentStringFormat="Błędnie zaklasyfikowano {0}% sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding TruePositive}"
+                    <Label Content="{Binding TruePositive}"
                        ContentStringFormat="True-Positive {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding TrueNegative}"
+                    <Label Content="{Binding TrueNegative}"
                        ContentStringFormat="True-Negative {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding FalsePositive}"
+                    <Label Content="{Binding FalsePositive}"
                        ContentStringFormat="False-Positive {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding FalseNegative}"
+                    <Label Content="{Binding FalseNegative}"
                        ContentStringFormat="False-Negative {0} sesji"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding Recall}"
+                    <Label Content="{Binding Recall}"
                        ContentStringFormat="Recall wynosi {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding Precision}"
+                    <Label Content="{Binding Precision}"
                        ContentStringFormat="Precision wynosi {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding Accuracy}"
+                    <Label Content="{Binding Accuracy}"
                        ContentStringFormat="Accuracy wynosi {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
-                <Label Content="{Binding Measure}"
+                    <Label Content="{Binding Measure}"
                        ContentStringFormat="Współczynik F1 wynosi {0}"
                        Style="{StaticResource DefaultLabelStyle}"
-                       Foreground="White"
-                       FontSize="14"
+                       Foreground="{StaticResource DarkFontColorBrush}"
+                       FontSize="{StaticResource FontSizeRegular}"
                        Margin="5"
                        HorizontalAlignment="Right" />
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-
+        </Border>
     </Grid>
 </UserControl>
